@@ -2,6 +2,7 @@
 2014-06-19 Sasa Bojanic <sasaboy@together.at>
    # Improved Open (new XPDL file) action to work in a standard way
    # Fix: Now properly rendering transition's diamond on the tail (it was not properly rendered when transition expression was set and then removed)
+   # Fix: Now properly rendering empty choice in combo box (e.g. for the type of transition condition)
    
 2014-06-18 Sasa Bojanic <sasaboy@together.at>
    # Improved GUI
